# Rusterstand

./: Readme.md  package-lock.json  package.json
rusterstand-backend/: Cargo.toml
rusterstand-backend/src/: main.rs  schema.rs
rusterstand-backend/src/Controller/: UserController.rs  _Controller.rs
rusterstand-backend/src/DB/: db_connection.rs  schema.rs
rusterstand-backend/src/Routes/: _Routes.rs
rusterstand-backend/src/Routes/Errors/: Errors.rs
rusterstand-frontend/: .gitignore  LICENSE  package-lock.json  package.json
rusterstand-frontend/src/: App.tsx
rusterstand_backend/: .gitignore  Cargo.toml  rocket.toml
rusterstand_backend/src/: main.rs  schema.rs
