[package]
name = "rusterstand-backend"
version = "0.0.1"
authors = ["Jonathan Thomas Dean <JonathanTomDean@Gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
serde_json = "1.0"
diesel = { version = "1.4.6", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json"]

# [dependencies]
# rocket = "0.4.7"
# diesel = { version = "1.4.6", features = ["postgres"] }
# dotenv = "0.15.0"
# log = "0.4.14"
# pretty_env_logger = "0.4.0"
# serde = "1.0.88"
# serde_json = "1.0.64"
# serde_derive = "1.0.124"
# bcrypt = "0.9.0"
# jsonwebtoken = "7.2.0"

# [dependencies.rocket_contrib]
# git = "https://github.com/SergioBenitez/Rocket"
# default-features = false
# features = ["json"]